[gd_scene load_steps=3 format=3 uid="uid://2j4pkh5ssjw4"]

[ext_resource type="Script" path="res://elements/enemy_group/enemy_group.gd" id="1_ac5fb"]
[ext_resource type="PackedScene" uid="uid://iwtuke22x6wa" path="res://elements/enemy_green/enemy_green.tscn" id="2_1takf"]

[node name="EnemyGroup" type="Node2D" groups=["enemy_group"]]
script = ExtResource("1_ac5fb")

[node name="EnemyGreen" parent="." instance=ExtResource("2_1takf")]
position = Vector2(13, 9)
scale = Vector2(1, 1)

[node name="EnemyGreen2" parent="." instance=ExtResource("2_1takf")]
position = Vector2(31, 9)
scale = Vector2(1, 1)

[node name="EnemyGreen3" parent="." instance=ExtResource("2_1takf")]
position = Vector2(49, 9)
scale = Vector2(1, 1)

[node name="EnemyGreen4" parent="." instance=ExtResource("2_1takf")]
position = Vector2(67, 9)
scale = Vector2(1, 1)

[node name="EnemyGreen5" parent="." instance=ExtResource("2_1takf")]
position = Vector2(85, 9)
scale = Vector2(1, 1)

[node name="EnemyGreen6" parent="." instance=ExtResource("2_1takf")]
position = Vector2(103, 9)
scale = Vector2(1, 1)

[node name="EnemyGreen7" parent="." instance=ExtResource("2_1takf")]
position = Vector2(121, 9)
scale = Vector2(1, 1)

[node name="EnemyGreen15" parent="." instance=ExtResource("2_1takf")]
position = Vector2(139, 9)
scale = Vector2(1, 1)

[node name="EnemyGreen18" parent="." instance=ExtResource("2_1takf")]
position = Vector2(157, 9)
scale = Vector2(1, 1)

[node name="EnemyGreen19" parent="." instance=ExtResource("2_1takf")]
position = Vector2(175, 9)
scale = Vector2(1, 1)

[node name="EnemyGreen20" parent="." instance=ExtResource("2_1takf")]
position = Vector2(193, 9)
scale = Vector2(1, 1)

[node name="EnemyGreen8" parent="." instance=ExtResource("2_1takf")]
position = Vector2(13, 24)
scale = Vector2(1, 1)

[node name="EnemyGreen9" parent="." instance=ExtResource("2_1takf")]
position = Vector2(31, 24)
scale = Vector2(1, 1)

[node name="EnemyGreen10" parent="." instance=ExtResource("2_1takf")]
position = Vector2(49, 24)
scale = Vector2(1, 1)

[node name="EnemyGreen11" parent="." instance=ExtResource("2_1takf")]
position = Vector2(67, 24)
scale = Vector2(1, 1)

[node name="EnemyGreen12" parent="." instance=ExtResource("2_1takf")]
position = Vector2(85, 24)
scale = Vector2(1, 1)

[node name="EnemyGreen13" parent="." instance=ExtResource("2_1takf")]
position = Vector2(103, 24)
scale = Vector2(1, 1)

[node name="EnemyGreen14" parent="." instance=ExtResource("2_1takf")]
position = Vector2(121, 24)
scale = Vector2(1, 1)

[node name="EnemyGreen16" parent="." instance=ExtResource("2_1takf")]
position = Vector2(139, 24)
scale = Vector2(1, 1)

[node name="EnemyGreen21" parent="." instance=ExtResource("2_1takf")]
position = Vector2(157, 24)
scale = Vector2(1, 1)

[node name="EnemyGreen22" parent="." instance=ExtResource("2_1takf")]
position = Vector2(175, 24)
scale = Vector2(1, 1)

[node name="EnemyGreen23" parent="." instance=ExtResource("2_1takf")]
position = Vector2(193, 24)
scale = Vector2(1, 1)

[node name="BlockTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="ShotTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="ShotTimer" to="." method="_on_shot_timer_timeout"]
